--- a/local.yml
+++ b/local.yml
@@ -42,7 +42,7 @@
       command:
         chdir: /yay
         cmd: "makepkg -sfi --noconfirm"
-        become_user: your_non_root_user
+        become_user: mateusz 
 
     - name: copy bash_profile
       copy:
