--- a/local.yml
+++ b/local.yml
@@ -42,6 +42,7 @@
       command:
         chdir: /yay
         cmd: "makepkg -sfi --noconfirm"
+        become: false
 
     - name: copy bash_profile
       copy:
