--- a/local.yml
+++ b/local.yml
@@ -39,9 +39,7 @@
         update: true
 
     - name: install yay
-      command:
-        chdir: home/mateusz/yay
-        cmd: "makepkg -sfi --noconfirm"
+      command: chdir=/yay makepkg -sfi --noconfirm
       become: false
 
     - name: copy bash_profile
