--- a/local.yml
+++ b/local.yml
@@ -39,6 +39,7 @@
         update: true
 
   - name: install yay
+    become: false
     command:
       chdir: /home/mateusz/yay
       cmd: "makepkg -sfi --noconfirm"
