--- a/local.yml
+++ b/local.yml
@@ -35,13 +35,13 @@
   - name: clone yay
     git:
         repo: https://aur.archlinux.org/yay-bin.git
-        dest: /home/mateusz/yay
+        dest: /home/mateusz/Downloads/yay
         update: true
 
   - name: install yay
     become: false
     command:
-      chdir: /home/mateusz/yay
+      chdir: /home/mateusz/Downloads/yay
       cmd: "makepkg -sfi --noconfirm"
       creates: /usr/bin/yay
 
